# rust-rest-api-notes

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 0001_notes.sql
src/: dao.rs  database.rs  main.rs  routes.rs  schema.rs
