[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = "1.0.183"
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "macros", "postgres"] }
tokio = { version = "1.31.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }